syntax = "proto3";
package candy.meta;

option go_package = "meta";

import "common.proto";

service Master {
    rpc NewID (NewIDRequest) returns (NewIDResponse);
    rpc RegionGet (RegionGetRequest) returns (RegionGetResponse);
}


message NewIDRequest {}
message NewIDResponse {
    ResponseHeader  header  = 1;
    int64           ID      = 2;
}

message RegionGetRequest {
    string          Host    = 1;
}

message RegionGetResponse{
    ResponseHeader  header  = 1;
    int32           begin   = 2;
    int32           end     = 3;
}



